--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,16 @@
     <string name="change_password_button">Change password</string>
     <string name="confirm_password_hint">Confirm password</string>
     <string name="new_password_change_page">New password</string>
+    <string name="home">Home</string>
+    <string name="library">Library</string>
+    <string name="notes_storage">Notes storage</string>
+    <string name="home_navmenu">Home</string>
+    <string name="add">Add</string>
+    <string name="profile">Profile</string>
+    <string name="search">Search</string>
+    <string name="homeMenu">Home</string>
+    <string name="sound">""</string>
+    <string name="notes_storage1">Notes storage</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
